<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="charlie.doe"
        android:id="@+id/hint"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Ejercicio 2: Añadida etiqueta para introducir la contraseña. -->

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="Contraseña"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Ejercicio 3: Añadida la etiqueta de button. -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:id="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

    />

</androidx.constraintlayout.widget.ConstraintLayout>